up robolectric to 26 api, make dialog static for gradle, add active android provider, remove extra google key, 6.3 M for graddle, 4.6 M for maven